include all pictures and videos, and expand the 2024Bulgaria trip

--- a/journal/2024bulgaria/index.html
+++ b/journal/2024bulgaria/index.html
@@ -38,8 +38,8 @@
         </div>
         <p>不管怎样，我们安全到达了索非亚机场。到达层有穿着 IMC 工作服的人热情欢迎我们，并告知我们预订的去往布拉戈耶夫格勒的巴士将于下午 2 时 30 分出发。</p>
         <p>Anyway, we arrived at Sofia Airport safely. There were persons with IMC T-shirts welcoming us in the arrival hall, telling us the bus to Blagoevgrad as we booked would depart at 2:30 PM.</p>
-        <p>巴士实际于下午 2 时 40 分出发，于下午 4 时 20 分抵达布拉戈耶夫格勒的保加利亚美利坚大学 (AUBG)，用时 100 分钟。在等巴士的过程中，我们与一位瑞典参赛者交流了不少。巴士则是清一色的 Setra 品牌。</p>
-        <p>The bus actually departed at 2:40 PM, and reached American University in Bulgaria (AUBG) in Blagoevgrad at 4:20 PM. The journey was 100 minutes. We talked a lot with a Swedish participant when waiting for the bus. The buses were all Setra.</p>
+        <p>巴士实际于下午 2 时 40 分出发，于下午 4 时 20 分抵达布拉戈耶夫格勒的保加利亚美利坚大学 (AUBG) 的生活区 Skaptopara，用时 100 分钟。在等巴士的过程中，我们与一位瑞典参赛者交流了不少。巴士则是清一色的 Setra 品牌。</p>
+        <p>The bus actually departed at 2:40 PM, and reached the living area, named Skaptopara, of American University in Bulgaria (AUBG) in Blagoevgrad at 4:20 PM. The journey was 100 minutes. We talked a lot with a Swedish participant when waiting for the bus. The buses were all Setra.</p>
         <p>天真蓝啊！</p>
         <p>How blue and clear the sky was!</p>
         <div class="row">
@@ -47,5 +47,23 @@
             <div class="column"><figure><img src="pictures/lighthouse.jpg" style="width:100%" alt="Lighthouse"><figcaption>We talked with that Swedish guy here, near that lighthouse.</figcaption></figure></div>
             <div class="column"><figure><img src="pictures/setra.jpg" style="width:100%" alt="Setra"><figcaption>The Setra bus.</figcaption></figure></div>
         </div>
+        <h3 id="2024bulgaria-2" style="color: orange">二 等待<br>II. Waiting</h3>
+        <p>到达之后就是排队领名片、分宿舍的过程。站长和一位同校队员住在一起。两人间的面积很大，但唯一的也是最大的缺点就是没有空调。放完行李后，我们又去了一楼，墙上张贴着很多公告，说明本次竞赛的时间和考场安排。Skaptopara 只是生活区，考场在离宿舍一公里的教学区！</p>
+        <p>Once upon arrival, we waited in a long queue to take name card and for dormitory arrangement. The operator shared a room with a team member from the same university. Despite the huge space of the twin room, it has no air conditioner. After unpacking the luggage, we went to the ground floor again. There were many pieces of notice on the wall, mainly about time and exam venue arrangements. Skaptopara is only a living area. The exam venue is in the teaching building one kilometer away!</p>
+        <div class="row">
+            <div class="column"><figure><img src="pictures/arrive.jpg" style="width:100%" alt="Arrive"><figcaption>The view taken in front of Skaptopara II.</figcaption></figure></div>
+            <div class="column"><figure><img src="pictures/schedule.jpg" style="width:100%" alt="Schedule"><figcaption>The time arrangement.</figcaption></figure></div>
+            <div class="column"><figure><img src="pictures/aubgmap.jpg" style="width:100%" alt="AUBGMap"><figcaption>The map of Blagoevgrad and AUBG.</figcaption></figure></div>
+        </div>
+        <p>生活区有两幢宿舍楼，分别为 Skaptopara I 和 Skaptopara II；由于参赛者太多，带队老师们被安排到了生活区外的旅馆（有空调！）。还有一个图书馆，但是不开放；一个学生活动中心，有自习区域、咖啡厅、纪念品商店、室内运动场，二楼张贴着东欧各国社会主义时期的宣传画，还有一张毛主席语录。食堂位于活动中心三楼。活动中心南面也有室外体育场。</p>
+        <p>There are two dormitory buildings in the Living Area, namely Skaptopara I and Skaptopara II. The team leaders were all arranged to a hotel (with air conditioners!) outside of the Skaptoparas since there were too many participants. There is also a library, but closed; a student center, with self-study areas, a cafe, a souvenir shop, and an indoor playground. There are posters from communist periods of Eastern Europe on the wall, including a piece of saying from Mao. The canteen is on the top floor. There are also outdoor sport facilities southward in front of the student center.</p>
+        <p>大体熟悉地势后，晚饭开始了。不报太多期待的话，还是比较好吃的，没有网传“白人饭对中国胃”那样接受不了。因为保加利亚实行夏令时，天黑得特别晚，要到晚上九点以后，所以晚饭也至少要从晚上七点半开始。</p>
+        <p>The dinner started after we were familiar with the geography of Skaptopara. It was acceptable for Chinese stomachs, and even tasted good, if your expectation was not too high. Due to the 1-hour summer time shift (Energy Saving Time), it went dark very late, and it was still bright at 9 PM; thus the dinner was also no earlier than 7:30 PM.</p>
+        <div class="row">
+            <div class="column"><figure><img src="pictures/firstdinner.jpg" style="width:100%" alt="FirstDinner"><figcaption>The first dinner: beef and potato chips, potato pancake (vegan), salad. I took a little too much; I should be full without having that pancake.</figcaption></figure></div>
+            <div class="column"><figure><img src="pictures/floorp.jpg" style="width:100%" alt="FloorP"><figcaption>The floor on the ground is not called "First Floor (1)" or "Ground Floor (G)" here; it is called "P" or its Cyrillic equivalent.</figcaption></figure></div>
+            <div class="column"><figure><img src="pictures/blueboard.jpg" style="width:100%" alt="BlueBoard"><figcaption>The blue board for publicising the competition on the Floor "P". This competition is primarily sponsored by HUAWEI.</figcaption></figure></div>
+        </div>
+
     </body>
 </html>
