2024Bulgaria Day1 Complete

--- a/journal/2024bulgaria/index.html
+++ b/journal/2024bulgaria/index.html
@@ -64,6 +64,12 @@
             <div class="column"><figure><img src="pictures/floorp.jpg" style="width:100%" alt="FloorP"><figcaption>The floor on the ground is not called "First Floor (1)" or "Ground Floor (G)" here; it is called "P" or its Cyrillic equivalent.</figcaption></figure></div>
             <div class="column"><figure><img src="pictures/blueboard.jpg" style="width:100%" alt="BlueBoard"><figcaption>The blue board for publicising the competition on the Floor "P". This competition is primarily sponsored by HUAWEI.</figcaption></figure></div>
         </div>
-
+        <p>晚饭后大家去了生活区南面的超市 Kaufland。酸奶、汽水、巧克力都非常便宜：一大杯（400 克）酸奶有的不到 1 LV（约合人民币 4 元或 0.5 欧元），虽然不添加任何糖分，酸到难以下咽；一大瓶汽水（2 升）有的只有 1.5 LV，比瓶装水都便宜。但即使汽水比纯净水便宜，观察下来的肥胖率也不高。</p>
+        <p>We went to a supermarket named Kaufland southward to Skaptopara after dinner. The yoghurt, fizzy drinks, and chocolate were very cheap: the price of a big cup (400 g) of yoghurt could be lower than 1 LV (~CNY 4, EUR 0.5). However, it didn't consist any additional sugar and was extremely sour and extremely hard to drink directly. And a large bottle (2 L) of cola could be as cheap as 1.5 LV, even cheaper than bottled water. Despite this, the obesity rate of that city was observed not high.</p>
+        <p>Kaufland 晚上九点关门，我们几乎待到最后一刻；在扔掉实在喝不下去的酸奶后，我们回到了宿舍休息。</p>
+        <p>Kaufland closes at 9 PM, not until nearly which we did leave. After dropping the awfully unacceptable yoghurt into the bin, we were all back to dormitory to rest.</p>
+        <p>...</p>
+        <p>热，热啊！洗完澡后，还是不停地出汗。虽然晚上室外并不热（每日最低气温一般低于 20 摄氏度），但白天剧烈的阳光、苏系房屋的保温效果以及较低的通风率使得入睡成为每天最难熬的时段。虽然如此，由于向西倒时差，相对提前的生物钟还是使我晚上不到 11 点就进入梦乡。</p>
+        <p>HOT! VERY HOT! Sweating continued even after bath. It was cool outside after sunset (the lowest temperature of the day was generally lower than 20 degree Celsius), but the sharp sunlight during the day, the heat-keeping feature of Soviet-style buildings, and the low air change rate, all together made it the hardest time of the day to fall asleep. However, since it is going westward from China to Bulgaria, the jet lag had made the biological clock relatively earlier, and thus I still fell asleep before 11 PM.</p>
     </body>
 </html>
